Fix context menu z-index

--- a/web/src/components/ContextMenu.scss
+++ b/web/src/components/ContextMenu.scss
@@ -3,6 +3,7 @@
   background-color: var(--side-bar-color);
   border-radius: $border-radius;
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
 
   border: 1px solid var(--light-gray);
 
